--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,8 @@
     "react-icons": "^5.4.0",
     "shadcn-ui": "^0.9.4",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "vanilla-cookieconsent": "^3.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
